--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 }
 
 .header{
-  background: linear-gradient(120deg, #3acbf0 0%, #8bb0ff 100%);
+  background: linear-gradient(120deg, #000 0%, #8bb0ff 100%);
   padding: 24px;
   text-align: center;
   color: #FFF;
